<resources>
    <string name="app_name">ERG-IIA</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrate">Registrate</string>
    <string name="bienvenido">¡Bienvenido!</string>
    <string name="registrar_nueva_cuenta">Registrar nueva cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="register_success">Registro exitoso</string>
    <string name="register_error">Algo anda mal, intente de nuevo más tarde</string>
    <string name="welcome">Bienvenido</string>
    <string name="login_error">Vefique de nuevo sus datos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="Cuenta">Cuenta</string>
    <string name="brazo">Brazo</string>
    <string name="pierna">Piernas</string>
    <string name="espalda">Espalda</string>
    <string name="ejercicios_para_ejercitar_el_brazo">Ejercicios para ejercitar el brazo.</string>
    <string name="ejercicios_para_ejercitar_el_piernas">Ejercicios para ejercitar las piernas.</string>
    <string name="ejercicios_para_ejercitar_la_espalda">Ejercicios para ejercitar la espalda.</string>
    <string name="analisis_owas">Analisis OWAS</string>
    <string name="change_pass">Cambiar contraseña</string>
    <string name="cambiar">Cambiar</string>
    <string name="change_success">Cambio exitoso</string>
    <string name="change_failure">Hubo un problema, intente de nuevo mas tarde</string>
    <string name="warning_pass">La contraseña debe ser mayor a 6 caracteres</string>
    <string name="evaluacion_ergonomica_owas">Evaluacion Ergonomica OWAS</string>
    <string name="las_dos_piernas_rectas_y_con_el_peso_equilibrado_entre_ambas">Las dos piernas rectas y con el peso equilibrado entre ambas.</string>
    <string name="el_trabajador_permanece_sentado">El trabajador permanece sentado</string>
    <string name="de_pie_o_en_cunclillas_con_las_dos_piernas_flexionadasa_y_el_peso_equilibrado_entre_ambas">De pie o en cunclillas con las dos piernas flexionadasa y el peso equilibrado entre ambas</string>
    <string name="puede_considerarse_que_ocurre_para_angulos_muslo_pantorrilla_inferiores_o_iguales_a_150_angulos_mayores_seran_considerados_piernas_rectas">Puede considerarse que ocurre para angulos muslo-pantorrilla inferiores o iguales a 150°. Angulos mayores seran considerados piernas rectas</string>
    <string name="el_trabajador_apoya_una_o_las_dos_rodillas_en_el_suelo">El trabajador apoya una o las dos rodillas en el suelo</string>
    <string name="arrodillado">Arrodillado</string>
    <string name="el_trabajador_camina">El trabajador camina</string>
    <string name="andando">Andando</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="number_4">4</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_7">7</string>
    <string name="realiza_el_calculo_segun_los_ejercicios_y_el_peso_dado">Realiza el calculo segun los ejercicios y el peso dado.</string>
    <string name="calcular_nivel_de_riesgo">Calcular nivel de riesgo</string>
    <string name="peso">Peso</string>
    <string name="codigos_correspondientes_a_peso">Codigos correspondientes a peso</string>
    <string name="codigo_1">Codigo 1</string>
    <string name="codigo_2">Codigo 2</string>
    <string name="codigo_3">Codigo 3</string>
    <string name="codigo_4">Codigo 4</string>
    <string name="codigo_5">Codigo 5</string>
    <string name="codigo_6">Codigo 6</string>
    <string name="codigo_7">Codigo 7</string>
    <string name="cantidad">Cantidad</string>
    <string name="postura_normal">Postura normal sin efectos dañinos en el sistema músculo-esquelético</string>
    <string name="postura_probabilidad">Postura con posibilidad de causar dañor al sistema músculo-esquelético</string>
    <string name="postura_efectos">Postura con efectos dañinos sobre el sistema músculo-esquelético</string>
    <string name="carga_dañada">La carga causada por esta postura tiene efectos sumamente dañinos sobre el sistema músculo-esquelético</string>
    <string name="no_accion">No requiere acción</string>
    <string name="acciones_futuro">Se requieren acciones correctivas en un futuro cercano</string>
    <string name="acciones_asap">Se requieren acciones correctivas lo antes posible</string>
    <string name="acciones_inmediatas">Se requiere tomar acciones correctivas inmediatamente</string>
    <string name="codigo">Codigo</string>
    <string name="home">Home</string>
    <string name="calcular">Calcular</string>
    <string name="da_click_en_la_imagen_para_ver_mas_info">Da click en la imagen para ver mas info</string>
    <string name="ambos_brazos_del_trabajador_estan_situados_bajo_el_nivel_de_los_hombros">Ambos brazos del trabajador estan situados bajo el nivel de los hombros</string>
    <string name="ambos_brazos_o_parte_de_los_brazos_del_trabajador_est_n_situados_por_encima_del_nivel_de_los_hombros">Ambos brazos (o parte de los brazos) del trabajador están situados por encima del nivel de los hombros</string>
    <string name="un_brazo_del_trabajador_est_situado_bajo_el_nivel_de_los_hombros_y_el_otro_o_parte_del_otro_est_situado_por_encima_del_nivel_de_los_hombros">Un brazo del trabajador está situado bajo el nivel de los hombros y el otro, o parte del otro, está situado por encima del nivel de los hombros</string>
    <string name="sentado">Sentado</string>
    <string name="el_eje_del_tronco_del_trabajador_est_alineado_con_el_eje_caderas_piernas">El eje del tronco del trabajador está alineado con el eje caderas-piernas</string>
    <string name="puede_considerarse_que_ocurre_para_inclinaciones_mayores_de_20">Puede considerarse que ocurre para inclinaciones mayores de 20°</string>
    <string name="existe_torsi_n_del_tronco_o_inclinaci_n_lateral_superior_a_20">Existe torsión del tronco o inclinación lateral superior a 20°</string>
    <string name="existe_flexi_n_del_tronco_y_giro_o_inclinaci_n_de_forma_simult_nea">Existe flexión del tronco y giro (o inclinación) de forma simultánea</string>
</resources>